Explicit 'groundNet' in TrafficSystem removed, TRAFFIC_EVENT_GRAPHLOADED handler added in TrafficSystem, draft for parameter 'initialRoute' added